<resources>
    <string name="app_name">Vhr</string>
    <string name="employee">员工信息</string>
    <string name="assets">套账信息</string>
    <string name="my">我的</string>
    <string name="title_employee" >员工信息</string>
    <string name="title_staff">员工信息</string>
    <string name="title_assets" >套帐信息</string>
    <string name="title_my" >我的</string>

    <string name="operator_default_name">用户名</string>
    <string name="operator_role_name_default">管理员</string>
    <string name="my_telephone_default">"    电话号码: "</string>
    <string name="my_phone_default">"    手机号码："</string>
    <string name="my_address_default">"    居住地址："</string>
    <string name="exit_button_default">退出登录</string>
    <string name="employee_name">姓名</string>
    <string name="employee_sex">性别</string>
    <string name="employee_department">部门</string>
    <string name="employee_birthday">生日</string>
    <string name="employee_position">职位</string>
    <string name="employee_title">职称</string>
    <string name="employee_school">院校</string>
    <string name="employee_specialty">专业</string>
    <string name="employee_idcard">身份证号</string>
    <string name="employee_nativePlace">籍贯</string>
    <string name="employee_workstate">在职状态</string>
    <string name="employee_phone">电话</string>
    <string name="employee_email">邮箱</string>
    <string name="employee_contractTerm">合同年限</string>
    <string name="employee_joinDate">入职日期</string>
    <string name="employee_contractStartDate">合同起始日期</string>
    <string name="employee_contractEndDate">合同终止日期</string>
    <string name="employee_engageForm">聘用形式</string>
    <string name="employee_address">地址</string>
    <string name="nation">民族</string>
    <string name="employee_conversionDate">转正日期</string>
    <string name="employee_qualifications">学历</string>
    <string name="employee_politicalStatus">政治面貌</string>
    <string name="employee_seniority">工龄</string>
    <string name="employee_maritalState">婚姻状况</string>
    <string name="employee_leaveDate">离职日期</string>
    <string name="admin_name">姓名</string>
    <string name="admin_telephone">电话号码</string>
    <string name="admin_phone">手机号码</string>
    <string name="admin_address">地址</string>
    <string name="admin_role">角色</string>

    <string name="basicSalary">基本工资</string>
    <string name="trafficSalary">交通补贴</string>
    <string name="lunchSalary">午餐补贴</string>
    <string name="bonus">年度奖金</string>
    <string name="activationTime">启动时间</string>
    <string name="pensionBase">养老金</string>
    <string name="pensionRatio">  比率</string>
    <string name="medicalInsuranceBase">医疗保险</string>
    <string name="medicalInsuranceRatio">   比率</string>
    <string name="accumulationFundBase">公积金</string>
    <string name="accumulationFundRatio"> 比率</string>
</resources>