<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_staff"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_staff"
        android:name="com.example.vhr_android_demo.fragment.fragment_demo"
        android:label="@string/title_employee"
        tools:layout="@layout/frame_employee" />


    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.example.vhr_android_demo.fragment.fragment_demo2"
        android:label="@string/title_assets"
        tools:layout="@layout/frame_assets" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.vhr_android_demo.fragment.fragment_demo3"
        android:label="@string/title_my"
        tools:layout="@layout/frame_my" />

</navigation>